test-crates/duchess-java-tests/tests/ui/duplicate_extends.stderr
error: error in class `log.Builder`: duplicate reference in 'extends' to 'java.lang.Object'
 --> tests/ui/duplicate_extends.rs:4:5
  |
4 |     public class log.Builder extends java.lang.Object, java.lang.Object {}
  |     ^^^^^^

error: aborting due to 1 previous error

